# paper-collect

./: .gitignore  README.md  pyproject.toml
src/paper_collect/: __init__.py  cli.py  db.py  dblp.py  download.py  schema.sql  text.py
src/paper_collect/downloaders/: __init__.py  ccs.py  common.py  generic.py  ndss.py  security.py  sp.py
tests/: test_dblp.py  test_download.py  test_text.py
